# rpt_dosi

./: .gitignore  .gitmodules  README.md  dicom_test_dicomdir.py  pyproject.toml  readme.md  readme1.md  readme2.md  readme3.md  readme_tests.md  requirements.txt  setup.py
.github/workflows/: main.yml
db_clb/: rpt_db_all_date_and_activities  rpt_db_set_injection_datetime_from_xls  rpt_segment
docs/: readme0.md  readme1.md  readme2.md  readme3.md  readme_tests.md
docs/source/: conf.py  index.rst  user_guide.md  user_guide_1_start.md  user_guide_2_images.md  user_guide_3_dose.md
rpt_dosi/: __init__.py  db.py  dicom.py  dicom_utils.py  doserate.py  doserate.savepy  doserate_OLD.py  dosimetry.py  helpers.py  images.py  metadata.py  opendose.py  setup.py  structWithRTUtils.py  syd2json.py  tmtv.py  utils.py
rpt_dosi/data/: lu177_left_kidney.json  lu177_liver.json  lu177_right_kidney.json  lu177_spleen.json  opendose_isotopes.json  opendose_sources.json
rpt_dosi/data/ICRP_110_AF/: lu-177_left kidney c+m+p.json  lu-177_liver.json  lu-177_right kidney c+m+p.json  lu-177_spleen.json  opendose_isotopes.json  opendose_sources.json
rpt_dosi/data/ICRP_110_AM/: lu-177_left kidney c+m+p.json  lu-177_liver.json  lu-177_right kidney c+m+p.json  lu-177_spleen.json  opendose_sources.json
scripts/: compute_dose_workflow.py  installTotalSegmentator.sh  runTotalSegmentator.slurm  syd2json.py  syd2totalSegmentator.py
src/: setup.py
src/data/ICRP_110_AF/: lu-177_right kidney c+m+p.json
src/data/ICRP_110_AM/: lu-177_liver.json  opendose_sources.json
src/scripts/: rpt_db_set_spect_datetime_from_dicom.py  rpt_db_spect_calibration.py  rpt_dose_hanscheid.py  rpt_resample_spect.py  rpt_tests.py  rpt_tmtv.py
tests/: db.json  db.save.json  test001_image_basics.py  test001_image_metadata.py  test001_image_metadata_date.py  test001_image_spect_update.py  test001_images.py  test001_images_update.py  test001_resample_ct.py  test001_resample_image.py  test001_resample_roi.py  test001_resample_spect.py  test001a_image_crud.py  test001b_image_metadata.py  test001b_image_units.py  test001c_image_metadata_date.py  test001d_image_metadata_date.py  test001d_image_spect_update.py  test001e_image_set_metadata.py  test001f_image_read_wrong_type.py  test002_resample_ct.py  test002_resample_roi.py  test002_resample_spect.py  test002_spect_calibration.py  test002_spect_update.py  test002a_resample_ct.py  test002a_resample_image.py  test002b_resample_spect.py  test002c_resample_roi.py  test003_triexpo_fit.py  test003a_roi_tac.py  test003b_triexpo_fit.py  test004_dose_hanscheid.py  test005_dose_madsen.py  test006_tmtv.py  test006_tmtv_3.py  test006a_tmtv.py  test006b_tmtv.py  test006c_tmtv.py  test006d_tmtv.py  (+25 more)
