[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rpt_dosi"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = ["readme.md", "readme1.md", "readme2.md", "readme3.md"]}

[project]
name = "rpt-dosi"
dynamic = ["version", "readme"]
authors = [{name = "David Sarrut", email = "david.sarrut@creatis.insa-lyon.fr"}]
description = "RadioPharmaceutical Therapy Dosimetry"
license = {file = "LICENSE"}
keywords = ["html"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
dependencies = [
        "colored",
        "tqdm",
        "pydicom",
        "click",
        "python-box<7.0.0",
        "numpy",
        "SimpleITK",
        "matplotlib",
        "python-Levenshtein",
        "bs4",
        "selenium",
        "radioactivedecay",
        "questionary",
        "pandas",
        "openpyxl",
]
requires-python = ">=3.8"

[project.scripts]

rpt_tests = "src/scripts.rpt_tests:go"
rpt_crop_bg = "src/scripts.rpt_crop_bg:go"
rpt_roi_crop = "src/scripts.rpt_roi_crop:go"
rpt_resample_ct = "src/scripts.rpt_resample_ct:go"
rpt_resample_spect = "src/scripts.rpt_resample_spect:go"
rpt_resample_roi = "src/scripts.rpt_resample_roi:go"
rpt_dose = "src/scripts.rpt_dose:go"
rpt_tmtv = "src/scripts.rpt_tmtv:go"

rpt_spect_calibration = "src/scripts.rpt_spect_calibration:go"
rpt_spect_Bq_to_SUV = "src/scripts.rpt_spect_Bq_to_SUV:go"

opendose_web_get_isotopes_list = "src/scripts.opendose_web_get_isotopes_list:go"
opendose_web_get_sources_list = "src/scripts.opendose_web_get_sources_list:go"
opendose_web_get_svalues = "src/scripts.opendose_web_get_svalues:go"

rpt_db_rois_activity = "src/scripts.rpt_db_rois_activity:go"
rpt_db_info = "src/scripts.rpt_db_info:go"
rpt_db_add_rois = "src/scripts.rpt_db_add_rois:go"
rpt_db_tac_plot = "src/scripts.rpt_db_tac_plot:go"
rpt_db_tac_triexpo = "src/scripts.rpt_db_tac_triexpo:go"
rpt_db_set_spect_datetime_from_dicom = "src/scripts.rpt_db_set_spect_datetime_from_dicom:go"
rpt_db_spect_calibration = "src/scripts.rpt_db_spect_calibration:go"

rpt_dicom_browse = "src/scripts.rpt_dicom_browse:go"
rpt_dicom_select = "src/scripts.rpt_dicom_select:go"
rpt_dicom_db = "src/scripts.rpt_dicom_db:go"
